fix: visible cards box-shadow

--- a/client/src/views/create-history-view/styles/index.scss
+++ b/client/src/views/create-history-view/styles/index.scss
@@ -196,6 +196,7 @@
           scroll-snap-type: x mandatory;
           padding-left: 150px;
           padding-right: 150px;
+          padding-bottom: 14px; // cards box-shadow
 
           &::-webkit-scrollbar {
             display: none;
